--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -59,7 +59,6 @@
     "keyTypeRSA": "RSA",
     "keyTypeECDSA": "ECDSA",
     "keyTypeEd25519": "Ed25519",
-    "updateCredential": "Update Credential",
     "basicInfo": "Basic Info",
     "authentication": "Authentication",
     "organization": "Organization",
@@ -119,7 +118,6 @@
     "credentialSecuredDescription": "All sensitive data is encrypted with AES-256",
     "passwordAuthentication": "Password Authentication",
     "keyAuthentication": "Key Authentication",
-    "keyType": "Key Type",
     "securityReminder": "Security Reminder",
     "securityReminderText": "Never share your credentials. All data is encrypted at rest.",
     "hostsUsingCredential": "Hosts Using This Credential",
@@ -299,7 +297,7 @@
     "warning": "Warning",
     "info": "Info",
     "success": "Success",
-    "loading": "Loading",
+    "loading": "Loading...",
     "required": "Required",
     "optional": "Optional",
     "connect": "Connect",
@@ -315,7 +313,6 @@
     "updateAvailable": "Update Available",
     "sshPath": "SSH Path",
     "localPath": "Local Path",
-    "loading": "Loading...",
     "noAuthCredentials": "No authentication credentials available for this SSH host",
     "noReleases": "No Releases",
     "updatesAndReleases": "Updates & Releases",
@@ -330,13 +327,10 @@
     "resetPassword": "Reset Password",
     "resetCode": "Reset Code",
     "newPassword": "New Password",
-    "sshPath": "SSH Path",
-    "localPath": "Local Path",
     "folder": "Folder",
     "file": "File",
     "renamedSuccessfully": "renamed successfully",
     "deletedSuccessfully": "deleted successfully",
-    "noAuthCredentials": "No authentication credentials available for this SSH host",
     "noTunnelConnections": "No tunnel connections configured",
     "sshTools": "SSH Tools",
     "english": "English",
@@ -348,14 +342,12 @@
     "login": "Login",
     "logout": "Logout",
     "register": "Register",
-    "username": "Username",
     "password": "Password",
     "version": "Version",
     "confirmPassword": "Confirm Password",
     "back": "Back",
     "email": "Email",
     "submit": "Submit",
-    "cancel": "Cancel",
     "change": "Change",
     "save": "Save",
     "saving": "Saving...",
@@ -363,22 +355,15 @@
     "edit": "Edit",
     "add": "Add",
     "search": "Search",
-    "loading": "Loading...",
-    "error": "Error",
-    "success": "Success",
-    "warning": "Warning",
-    "info": "Info",
     "confirm": "Confirm",
     "yes": "Yes",
     "no": "No",
     "ok": "OK",
-    "close": "Close",
     "enabled": "Enabled",
     "disabled": "Disabled",
     "important": "Important",
     "notEnabled": "Not Enabled",
     "settingUp": "Setting up...",
-    "back": "Back",
     "next": "Next",
     "previous": "Previous",
     "refresh": "Refresh",
@@ -431,7 +416,7 @@
     "userManagement": "User Management",
     "makeAdmin": "Make Admin",
     "removeAdmin": "Remove Admin",
-    "deleteUser": "Delete User",
+    "deleteUser": "Delete user {{username}}? This cannot be undone.",
     "allowRegistration": "Allow Registration",
     "oidcSettings": "OIDC Settings",
     "clientId": "Client ID",
@@ -485,7 +470,6 @@
     "removeAdminStatus": "Remove admin status from {{username}}?",
     "adminStatusRemoved": "Admin status removed from {{username}}",
     "failedToRemoveAdminStatus": "Failed to remove admin status",
-    "deleteUser": "Delete user {{username}}? This cannot be undone.",
     "userDeletedSuccessfully": "User {{username}} deleted successfully",
     "failedToDeleteUser": "Failed to delete user",
     "overrideUserInfoUrl": "Override User Info URL (not required)",
@@ -563,7 +547,6 @@
     "verificationCompleted": "Compatibility verification completed - no data was changed",
     "verificationInProgress": "Verification completed",
     "dataMigrationCompleted": "Data migration completed successfully!",
-    "migrationCompleted": "Migration completed",
     "verificationFailed": "Compatibility verification failed",
     "migrationFailed": "Migration failed",
     "runningVerification": "Running compatibility verification...",
@@ -641,7 +624,8 @@
     "requiresPasswordLogin": "Requires password login enabled",
     "passwordLoginDisabledWarning": "Password login is disabled. Ensure OIDC is properly configured or you will not be able to log in to Termix.",
     "oidcRequiredWarning": "CRITICAL: Password login is disabled. If you reset or misconfigure OIDC, you will lose all access to Termix and brick your instance. Only proceed if you are absolutely certain.",
-    "confirmDisableOIDCWarning": "WARNING: You are about to disable OIDC while password login is also disabled. This will brick your Termix instance and you will lose all access. Are you absolutely sure you want to proceed?"
+    "confirmDisableOIDCWarning": "WARNING: You are about to disable OIDC while password login is also disabled. This will brick your Termix instance and you will lose all access. Are you absolutely sure you want to proceed?",
+    "failedToUpdatePasswordLoginStatus": "Failed to update password login status"
   },
   "hosts": {
     "title": "Host Manager",
@@ -1054,7 +1038,6 @@
     "copyPaths": "Copy Paths",
     "delete": "Delete",
     "properties": "Properties",
-    "preview": "Preview",
     "refresh": "Refresh",
     "downloadFiles": "Download {{count}} files to Browser",
     "copyFiles": "Copy {{count}} items",
@@ -1069,18 +1052,11 @@
     "failedToDeleteItem": "Failed to delete item",
     "itemRenamedSuccessfully": "{{type}} renamed successfully",
     "failedToRenameItem": "Failed to rename item",
-    "upload": "Upload",
     "download": "Download",
-    "newFile": "New File",
-    "newFolder": "New Folder",
-    "rename": "Rename",
-    "delete": "Delete",
     "permissions": "Permissions",
     "size": "Size",
     "modified": "Modified",
     "path": "Path",
-    "fileName": "File Name",
-    "folderName": "Folder Name",
     "confirmDelete": "Are you sure you want to delete {{name}}?",
     "uploadSuccess": "File uploaded successfully",
     "uploadFailed": "File upload failed",
@@ -1100,10 +1076,7 @@
     "fileSavedSuccessfully": "File saved successfully",
     "saveTimeout": "Save operation timed out. The file may have been saved successfully, but the operation took too long to complete. Check the Docker logs for confirmation.",
     "failedToSaveFile": "Failed to save file",
-    "folder": "Folder",
-    "file": "File",
     "deletedSuccessfully": "deleted successfully",
-    "failedToDeleteItem": "Failed to delete item",
     "connectToServer": "Connect to a Server",
     "selectServerToEdit": "Select a server from the sidebar to start editing files",
     "fileOperations": "File Operations",
@@ -1160,10 +1133,8 @@
     "unpinFile": "Unpin file",
     "removeShortcut": "Remove shortcut",
     "saveFilesToSystem": "Save {{count}} files as...",
-    "saveToSystem": "Save as...",
     "pinFile": "Pin file",
     "addToShortcuts": "Add to shortcuts",
-    "selectLocationToSave": "Select location to save",
     "downloadToDefaultLocation": "Download to default location",
     "pasteFailed": "Paste failed",
     "noUndoableActions": "No undoable actions",
@@ -1181,7 +1152,6 @@
     "editPath": "Edit path",
     "confirm": "Confirm",
     "cancel": "Cancel",
-    "folderName": "Folder name",
     "find": "Find...",
     "replaceWith": "Replace with...",
     "replace": "Replace",
@@ -1207,23 +1177,18 @@
     "outdent": "Outdent",
     "autoComplete": "Auto Complete",
     "imageLoadError": "Failed to load image",
-    "zoomIn": "Zoom In",
-    "zoomOut": "Zoom Out",
     "rotate": "Rotate",
     "originalSize": "Original Size",
     "startTyping": "Start typing...",
     "unknownSize": "Unknown size",
     "fileIsEmpty": "File is empty",
-    "modified": "Modified",
     "largeFileWarning": "Large File Warning",
     "largeFileWarningDesc": "This file is {{size}} in size, which may cause performance issues when opened as text.",
     "fileNotFoundAndRemoved": "File \"{{name}}\" not found and has been removed from recent/pinned files",
     "failedToLoadFile": "Failed to load file: {{error}}",
     "serverErrorOccurred": "Server error occurred. Please try again later.",
-    "fileSavedSuccessfully": "File saved successfully",
     "autoSaveFailed": "Auto-save failed",
     "fileAutoSaved": "File auto-saved",
-    "fileDownloadedSuccessfully": "File downloaded successfully",
     "moveFileFailed": "Failed to move {{name}}",
     "moveOperationFailed": "Move operation failed",
     "canOnlyCompareFiles": "Can only compare two files",
@@ -1317,17 +1282,8 @@
     "local": "Local",
     "remote": "Remote",
     "dynamic": "Dynamic",
-    "noSshTunnels": "No SSH Tunnels",
-    "createFirstTunnelMessage": "Create your first SSH tunnel to get started. Use the SSH Manager to add hosts with tunnel connections.",
     "unknownConnectionStatus": "Unknown",
-    "connected": "Connected",
-    "connecting": "Connecting...",
-    "disconnecting": "Disconnecting...",
-    "disconnected": "Disconnected",
     "portMapping": "Port {{sourcePort}} → {{endpointHost}}:{{endpointPort}}",
-    "disconnect": "Disconnect",
-    "connect": "Connect",
-    "canceling": "Canceling...",
     "endpointHostNotFound": "Endpoint host not found",
     "discord": "Discord",
     "githubIssue": "GitHub issue",
@@ -1340,7 +1296,7 @@
     "disk": "Disk",
     "network": "Network",
     "uptime": "Uptime",
-    "loadAverage": "Load Average",
+    "loadAverage": "Avg: {{avg1}}, {{avg5}}, {{avg15}}",
     "processes": "Processes",
     "connections": "Connections",
     "usage": "Usage",
@@ -1356,7 +1312,6 @@
     "cpuCores_one": "{{count}} CPU",
     "cpuCores_other": "{{count}} CPUs",
     "naCpus": "N/A CPU(s)",
-    "loadAverage": "Avg: {{avg1}}, {{avg5}}, {{avg15}}",
     "loadAverageNA": "Avg: N/A",
     "cpuUsage": "CPU Usage",
     "memoryUsage": "Memory Usage",
@@ -1375,7 +1330,6 @@
     "totpRequired": "TOTP Authentication Required",
     "totpUnavailable": "Server Stats unavailable for TOTP-enabled servers",
     "load": "Load",
-    "available": "Available",
     "editLayout": "Edit Layout",
     "cancelEdit": "Cancel",
     "addWidget": "Add Widget",
@@ -1514,7 +1468,9 @@
     "authenticating": "Authenticating...",
     "dataLossWarning": "Resetting your password this way will delete all your saved SSH hosts, credentials, and other encrypted data. This action cannot be undone. Only use this if you have forgotten your password and are not logged in.",
     "authenticationDisabled": "Authentication Disabled",
-    "authenticationDisabledDesc": "All authentication methods are currently disabled. Please contact your administrator."
+    "authenticationDisabledDesc": "All authentication methods are currently disabled. Please contact your administrator.",
+    "passwordResetSuccess": "Password Reset Successful",
+    "passwordResetSuccessDesc": "Your password has been reset successfully. You can now log in with your new password."
   },
   "errors": {
     "notFound": "Page not found",
@@ -1678,7 +1634,6 @@
     "deleteItem": "Delete Item",
     "createNewFile": "Create New File",
     "createNewFolder": "Create New Folder",
-    "deleteItem": "Delete Item",
     "renameItem": "Rename Item",
     "clickToSelectFile": "Click to select a file",
     "noSshHosts": "No SSH Hosts",
