feat: Improve rbac UI and fixes some bugs

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1881,10 +1881,14 @@
     "assignRoles": "Assign Roles",
     "userRoleAssignment": "User-Role Assignment",
     "selectUserPlaceholder": "Select a user",
+    "searchUsers": "Search users...",
+    "noUserFound": "No user found",
     "currentRoles": "Current Roles",
     "noRolesAssigned": "No roles assigned",
     "assignNewRole": "Assign New Role",
     "selectRolePlaceholder": "Select a role",
+    "searchRoles": "Search roles...",
+    "noRoleFound": "No role found",
     "assign": "Assign",
     "roleCreatedSuccessfully": "Role created successfully",
     "roleUpdatedSuccessfully": "Role updated successfully",
