--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -901,6 +901,47 @@
     "searchServers": "Search servers...",
     "noServerFound": "No server found",
     "jumpHostsOrder": "Connections will be made in order: Jump Host 1 → Jump Host 2 → ... → Target Server",
+    "socks5Proxy": "SOCKS5 Proxy",
+    "socks5Description": "Configure SOCKS5 proxy for SSH connection. All traffic will be routed through the specified proxy server.",
+    "enableSocks5": "Enable SOCKS5 Proxy",
+    "enableSocks5Description": "Use SOCKS5 proxy for this SSH connection",
+    "socks5Host": "Proxy Host",
+    "socks5Port": "Proxy Port",
+    "socks5Username": "Proxy Username",
+    "socks5Password": "Proxy Password",
+    "socks5UsernameOptional": "Optional: leave empty if proxy doesn't require authentication",
+    "socks5PasswordOptional": "Optional: leave empty if proxy doesn't require authentication",
+    "socks5ProxyChain": "Proxy Chain",
+    "socks5ProxyChainDescription": "Configure a chain of SOCKS proxies. Each proxy in the chain will connect through the previous one.",
+    "socks5ProxyMode": "Proxy Mode",
+    "socks5UseSingleProxy": "Use Single Proxy",
+    "socks5UseProxyChain": "Use Proxy Chain",
+    "socks5UsePreset": "Use Saved Preset",
+    "socks5SelectPreset": "Select Preset",
+    "socks5ManagePresets": "Manage Presets",
+    "socks5ProxyNode": "Proxy {{number}}",
+    "socks5AddProxy": "Add Proxy to Chain",
+    "socks5RemoveProxy": "Remove Proxy",
+    "socks5ProxyType": "Proxy Type",
+    "socks5SaveAsPreset": "Save as Preset",
+    "socks5SavePresetTitle": "Save Proxy Chain as Preset",
+    "socks5SavePresetDescription": "Save the current proxy chain configuration as a reusable preset",
+    "socks5PresetName": "Preset Name",
+    "socks5PresetDescription": "Description (optional)",
+    "socks5PresetCreated": "Proxy chain preset created",
+    "socks5PresetUpdated": "Proxy chain preset updated",
+    "socks5PresetDeleted": "Proxy chain preset deleted",
+    "socks5PresetSaved": "Preset \"{{name}}\" saved successfully",
+    "socks5PresetSaveError": "Failed to save preset",
+    "socks5PresetNameRequired": "Preset name is required",
+    "socks5EmptyChainError": "Cannot save an empty proxy chain",
+    "socks5ProxyChainEmpty": "Add at least one proxy to the chain",
+    "socks5HostDescription": "Hostname or IP address of the SOCKS proxy server",
+    "socks5PortDescription": "Port number of the SOCKS proxy server (default: 1080)",
+    "addProxyNode": "Add Proxy Node",
+    "noProxyNodes": "No proxy nodes configured. Click 'Add Proxy Node' to add one.",
+    "proxyNode": "Proxy Node",
+    "proxyType": "Proxy Type",
     "quickActions": "Quick Actions",
     "quickActionsDescription": "Quick actions allow you to create custom buttons that execute SSH snippets on this server. These buttons will appear at the top of the Server Stats page for quick access.",
     "quickActionsList": "Quick Actions List",
@@ -1632,7 +1673,12 @@
     "folderName": "Enter folder name",
     "fullPath": "Enter full path to item",
     "currentPath": "Enter current path to item",
-    "newName": "Enter new name"
+    "newName": "Enter new name",
+    "socks5Host": "127.0.0.1",
+    "socks5Username": "proxy username",
+    "socks5Password": "proxy password",
+    "socks5PresetName": "e.g., Work VPN Chain",
+    "socks5PresetDescription": "e.g., Proxy chain for accessing work servers"
   },
   "leftSidebar": {
     "failedToLoadHosts": "Failed to load hosts",
