--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -858,6 +858,47 @@
     "searchServers": "Поиск серверов...",
     "noServerFound": "Сервер не найден",
     "jumpHostsOrder": "Подключения будут выполнены в порядке: Промежуточный хост 1 → Промежуточный хост 2 → ... → Целевой сервер",
+    "socks5Proxy": "SOCKS5 Прокси",
+    "socks5Description": "Настройте SOCKS5 прокси для SSH подключения. Весь трафик будет направлен через указанный прокси-сервер.",
+    "enableSocks5": "Включить SOCKS5 Прокси",
+    "enableSocks5Description": "Использовать SOCKS5 прокси для этого SSH подключения",
+    "socks5Host": "Хост прокси",
+    "socks5Port": "Порт прокси",
+    "socks5Username": "Имя пользователя прокси",
+    "socks5Password": "Пароль прокси",
+    "socks5UsernameOptional": "Необязательно: оставьте пустым, если прокси не требует аутентификации",
+    "socks5PasswordOptional": "Необязательно: оставьте пустым, если прокси не требует аутентификации",
+    "socks5ProxyChain": "Цепочка Прокси",
+    "socks5ProxyChainDescription": "Настройте цепочку SOCKS прокси. Каждый прокси в цепочке будет подключаться через предыдущий.",
+    "socks5ProxyMode": "Режим Прокси",
+    "socks5UseSingleProxy": "Использовать Один Прокси",
+    "socks5UseProxyChain": "Использовать Цепочку Прокси",
+    "socks5UsePreset": "Использовать Сохраненный Пресет",
+    "socks5SelectPreset": "Выбрать Пресет",
+    "socks5ManagePresets": "Управление Пресетами",
+    "socks5ProxyNode": "Прокси {{number}}",
+    "socks5AddProxy": "Добавить Прокси в Цепочку",
+    "socks5RemoveProxy": "Удалить Прокси",
+    "socks5ProxyType": "Тип Прокси",
+    "socks5SaveAsPreset": "Сохранить как Пресет",
+    "socks5SavePresetTitle": "Сохранить Цепочку Прокси как Пресет",
+    "socks5SavePresetDescription": "Сохраните текущую конфигурацию цепочки прокси как переиспользуемый пресет",
+    "socks5PresetName": "Название Пресета",
+    "socks5PresetDescription": "Описание (необязательно)",
+    "socks5PresetCreated": "Пресет цепочки прокси создан",
+    "socks5PresetUpdated": "Пресет цепочки прокси обновлен",
+    "socks5PresetDeleted": "Пресет цепочки прокси удален",
+    "socks5PresetSaved": "Пресет \"{{name}}\" успешно сохранен",
+    "socks5PresetSaveError": "Не удалось сохранить пресет",
+    "socks5PresetNameRequired": "Необходимо указать название пресета",
+    "socks5EmptyChainError": "Невозможно сохранить пустую цепочку прокси",
+    "socks5ProxyChainEmpty": "Добавьте хотя бы один прокси в цепочку",
+    "socks5HostDescription": "Имя хоста или IP-адрес SOCKS прокси сервера",
+    "socks5PortDescription": "Номер порта SOCKS прокси сервера (по умолчанию: 1080)",
+    "addProxyNode": "Добавить узел прокси",
+    "noProxyNodes": "Узлы прокси не настроены. Нажмите 'Добавить узел прокси' чтобы добавить.",
+    "proxyNode": "Узел прокси",
+    "proxyType": "Тип прокси",
     "advancedAuthSettings": "Расширенные настройки аутентификации"
   },
   "terminal": {
@@ -1530,7 +1571,12 @@
     "folderName": "Введите имя папки",
     "fullPath": "Введите полный путь к элементу",
     "currentPath": "Введите текущий путь к элементу",
-    "newName": "Введите новое имя"
+    "newName": "Введите новое имя",
+    "socks5Host": "127.0.0.1",
+    "socks5Username": "имя пользователя прокси",
+    "socks5Password": "пароль прокси",
+    "socks5PresetName": "например, Рабочая VPN Цепочка",
+    "socks5PresetDescription": "например, Цепочка прокси для доступа к рабочим серверам"
   },
   "leftSidebar": {
     "failedToLoadHosts": "Не удалось загрузить хосты",
