Notes and Expiry add

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -681,6 +681,8 @@
     "folder": "Folder",
     "tags": "Tags",
     "pin": "Pin",
+    "notes": "Notes",
+    "expirationDate": "Expiration Date",
     "passwordRequired": "Password is required when using password authentication",
     "sshKeyRequired": "SSH Private Key is required when using key authentication",
     "keyTypeRequired": "Key Type is required when using key authentication",
@@ -1605,6 +1607,8 @@
     "folder": "folder",
     "password": "password",
     "keyPassword": "key password",
+    "notes": "Add notes about this host...",
+    "expirationDate": "Select expiration date",
     "pastePrivateKey": "Paste your private key here...",
     "pastePublicKey": "Paste your public key here...",
     "credentialName": "My SSH Server",
