--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -649,6 +649,8 @@
     "folder": "Папка",
     "tags": "Теги",
     "pin": "Закрепить",
+    "notes": "Заметки",
+    "expirationDate": "Дата истечения",
     "passwordRequired": "Пароль требуется при использовании аутентификации по паролю",
     "sshKeyRequired": "Приватный SSH-ключ требуется при использовании аутентификации по ключу",
     "keyTypeRequired": "Тип ключа требуется при использовании аутентификации по ключу",
@@ -1503,6 +1505,8 @@
     "folder": "папка",
     "password": "пароль",
     "keyPassword": "пароль ключа",
+    "notes": "Добавьте заметки об этом хосте...",
+    "expirationDate": "Выберите дату истечения",
     "pastePrivateKey": "Вставьте ваш приватный ключ здесь...",
     "pastePublicKey": "Вставьте ваш публичный ключ здесь...",
     "credentialName": "Мой SSH-сервер",
