Notes and Expiry fields add (#453)
* Add termix.rb Cask file

* Update Termix to version 1.9.0 with new checksum

* Update README to remove 'coming soon' notes

* Notes and Expiry add

* fix: cleanup files

---------

Co-authored-by: Luke Gustafson <88517757+LukeGus@users.noreply.github.com>
Co-authored-by: LukeGus <bugattiguy527@gmail.com>

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -665,6 +665,8 @@
     "folder": "Папка",
     "tags": "Теги",
     "pin": "Закрепить",
+    "notes": "Заметки",
+    "expirationDate": "Дата истечения",
     "passwordRequired": "Пароль требуется при использовании аутентификации по паролю",
     "sshKeyRequired": "Приватный SSH-ключ требуется при использовании аутентификации по ключу",
     "keyTypeRequired": "Тип ключа требуется при использовании аутентификации по ключу",
@@ -915,7 +917,7 @@
     "noProxyNodes": "Узлы прокси не настроены. Нажмите 'Добавить узел прокси' чтобы добавить.",
     "proxyNode": "Узел прокси",
     "proxyType": "Тип прокси",
-    "advancedAuthSettings": "Расширенные настройки аутентификации"
+    "advancedAuthSettings": "Расширенные настройки аутентификации",
     "advancedAuthSettings": "Расширенные настройки аутентификации",
     "addQuickAction": "Добавить Quick Action",
     "allHostsInFolderDeleted": "{{count}} хостов успешно удалены из папки \"{{folder}}\"",
@@ -1609,6 +1611,8 @@
     "folder": "папка",
     "password": "пароль",
     "keyPassword": "пароль ключа",
+    "notes": "Добавьте заметки об этом хосте...",
+    "expirationDate": "Выберите дату истечения",
     "pastePrivateKey": "Вставьте ваш приватный ключ здесь...",
     "pastePublicKey": "Вставьте ваш публичный ключ здесь...",
     "credentialName": "Мой SSH-сервер",
