feat: auto trim host inputs, fix file manager jump hosts, dashboard prevent duplicates, file manager terminal not size updating, improve left sidebar sorting, hide/show tags, add apperance user profile tab, add new host manager tabs.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1600,6 +1600,15 @@
     "commandAutocompleteDesc": "Enable Tab key autocomplete suggestions for terminal commands based on your command history",
     "defaultSnippetFoldersCollapsed": "Collapse Snippet Folders by Default",
     "defaultSnippetFoldersCollapsedDesc": "When enabled, all snippet folders will be collapsed when you open the snippets tab",
+    "showHostTags": "Show Host Tags",
+    "showHostTagsDesc": "Display tags under each host in the sidebar. Disable to hide all tags.",
+    "account": "Account",
+    "appearance": "Appearance",
+    "languageLocalization": "Language & Localization",
+    "fileManagerSettings": "File Manager",
+    "terminalSettings": "Terminal",
+    "hostSidebarSettings": "Host & Sidebar",
+    "snippetsSettings": "Snippets",
     "currentPassword": "Current Password",
     "passwordChangedSuccess": "Password changed successfully! Please log in again.",
     "failedToChangePassword": "Failed to change password. Please check your current password and try again."
@@ -1642,7 +1651,7 @@
     "searchHosts": "Search hosts by name, username, IP, folder, tags...",
     "enterPassword": "Enter your password",
     "totpCode": "6-digit TOTP code",
-    "searchHostsAny": "Search hosts by any info...",
+    "searchHostsAny": "Search hosts (try: tag:prod, user:root, ip:192.168)...",
     "confirmPassword": "Enter your password to confirm",
     "typeHere": "Type here",
     "fileName": "Enter file name (e.g., example.txt)",
