feat: update imports and improve admin settings user management

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -302,6 +302,7 @@
     "optional": "Optional",
     "connect": "Connect",
     "connecting": "Connecting...",
+    "creating": "Creating...",
     "clear": "Clear",
     "toggleSidebar": "Toggle Sidebar",
     "sidebar": "Sidebar",
@@ -487,6 +488,46 @@
     "linkToPasswordAccount": "Link to Password Account",
     "linkOIDCDialogTitle": "Link OIDC Account to Password Account",
     "linkOIDCDialogDescription": "Link {{username}} (OIDC user) to an existing password account. This will enable dual authentication for the password account.",
+    "createUser": "Create User",
+    "createUserDescription": "Create a new local user with username and password",
+    "enterUsername": "Enter username",
+    "enterPassword": "Enter password",
+    "userCreatedSuccessfully": "User {{username}} created successfully",
+    "failedToCreateUser": "Failed to create user",
+    "manageUser": "Manage User",
+    "manageUserDescription": "Manage user settings, roles, and permissions",
+    "authType": "Authentication Type",
+    "adminStatus": "Admin Status",
+    "userId": "User ID",
+    "regularUser": "Regular User",
+    "adminPrivileges": "Administrator Privileges",
+    "administratorRole": "Administrator Role",
+    "administratorRoleDescription": "Grant full system access and management privileges",
+    "passwordManagement": "Password Management",
+    "passwordResetWarning": "Resetting a user's password will delete all their data (SSH hosts, credentials, settings). This action cannot be undone.",
+    "resetUserPassword": "Reset User Password",
+    "resettingPassword": "Resetting...",
+    "passwordResetInitiated": "Password reset initiated for {{username}}. Reset code sent.",
+    "failedToResetPassword": "Failed to initiate password reset",
+    "sessionManagement": "Session Management",
+    "revokeAllSessions": "Revoke All Sessions",
+    "revokeAllSessionsDescription": "Force logout from all devices and sessions",
+    "revoking": "Revoking...",
+    "revoke": "Revoke All",
+    "dangerZone": "Danger Zone",
+    "deleteUserTitle": "Delete User Account",
+    "deleteUserWarning": "Permanently delete this user account and all associated data. This action cannot be undone.",
+    "deleting": "Deleting...",
+    "cannotDeleteSelf": "You cannot delete your own account",
+    "cannotRemoveLastAdmin": "Cannot remove the last administrator",
+    "cannotRemoveOwnAdmin": "You cannot remove your own admin privileges",
+    "cannotModifyOwnAdminStatus": "You cannot modify your own admin status",
+    "dualAuth": "Dual Auth",
+    "externalOIDC": "External (OIDC)",
+    "localPassword": "Local Password",
+    "confirmRevokeOwnSessions": "Are you sure you want to revoke all your own sessions? You will be logged out.",
+    "confirmMakeAdmin": "Are you sure you want to make {{username}} an admin?",
+    "confirmRemoveAdmin": "Are you sure you want to remove admin status from {{username}}?",
     "linkOIDCWarningTitle": "Warning: OIDC User Data Will Be Deleted",
     "linkOIDCActionDeleteUser": "Delete the OIDC user account and all their data",
     "linkOIDCActionAddCapability": "Add OIDC login capability to the target password account",
